--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,6 +3,7 @@ env:
   node: true
 extends:
   - airbnb-base
+  - plugin:jest/recommended
 parserOptions:
   ecmaVersion: 2020
   sourceType: module
