--- a/.github/workflows/my-check.yml
+++ b/.github/workflows/my-check.yml
@@ -5,7 +5,7 @@ on:
     branches: ['main']
 
 jobs:
-  Build:
+  build:
     runs-on: ubuntu-latest
     steps: 
       - uses: actions/checkout@v2
@@ -13,6 +13,24 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '14'
-      - run: make install
-      - run: make lint
-      - run: make test
+      - name: Install dependencies
+        run: make install
+      - name: Run linter
+        run: make lint
+      - name: Test
+        run: make test
+  coverage:
+    needs: [ build ]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - uses: actions/setup-node@master
+        with:
+          node-version: '14'
+      - name: Install dependencies
+        run: make install
+      - uses: paambaati/codeclimate-action@v2.2.4
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_REPORTER_ID }}
+        with:
+          coverageCommand: make test-coverage
